fix messageService voi getHistory co cursor