@@ -5,28 +5,22 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.jpa.domain.Specification;
-import org.springframework.security.access.prepost.PreAuthorize;
-import org.springframework.security.core.context.SecurityContext;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import vn.web.Common.RoleType;
 import vn.web.Controller.Request.*;
-import vn.web.Controller.Response.AddressResponse;
 import vn.web.Controller.Response.PageResponse;
 import vn.web.Controller.Response.UserResponse;
 import vn.web.Converter.UserMapper;
 import vn.web.Exception.ResourceNotFoundException;
-import vn.web.Model.AddressEntity;
-import vn.web.Common.*;
 import vn.web.Model.Role;
 import vn.web.Model.UserEntity;
-import vn.web.Repository.AddressRepository;
 import vn.web.Repository.RoleRepository;
 import vn.web.Repository.UserRepository;
 import vn.web.Services.UserService;
 import vn.web.Util.UserSpecs;
 
-import java.util.ArrayList;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
@@ -34,46 +28,33 @@ import java.util.stream.Collectors;
 @Service
 @Slf4j
 @RequiredArgsConstructor
-public class UserServiceImpl  implements UserService {
+public class UserServiceImpl implements UserService {
 
-    private final UserRepository userRepository ;
-    private final AddressRepository addressRepository;
-//    private final ModelMapper modelMapper;
+    private final UserRepository userRepository;
     private final PasswordEncoder passwordEncoder;
-    private final UserMapper userMapper ;
+    private final UserMapper userMapper;
     private final RoleRepository roleRepository;
 
-
     @Override
-    @PreAuthorize("authentication.principal.id == #id")
     public UserResponse getUser(long id) {
         UserEntity user = getUserEntity(id);
-//        return modelMapper.map(user , UserResponse.class);
-        Set<RoleType> roleTypes = user.getRolesSet().stream().map(role -> role.getName()).collect(Collectors.toSet());
-        UserResponse response  = userMapper.toDTOResponse(user) ;
-        response.setRoleTypes(roleTypes);
-        return response;
+        return toResponse(user);
     }
 
     @Override
-    public PageResponse<UserResponse> findALl(UserPageRequest req , Pageable pageable) {
-        Specification<UserEntity> specs = UserSpecs.search(req);
+    public PageResponse<UserResponse> findALl(UserPageRequest req, Pageable pageable) {
+        Specification<UserEntity> spec = UserSpecs.search(req);
+        Page<UserEntity> page = userRepository.findAll(spec, pageable);
 
-        Page<UserEntity> userPage  = userRepository.findAll(specs , pageable);
-
-
-        List<UserResponse> data = userPage.stream().map(user -> {
-            UserResponse response = userMapper.toDTOResponse(user);
-            Set<RoleType> roleTypes = user.getRolesSet().stream().map(role -> role.getName()).collect(Collectors.toSet());
-            response.setRoleTypes(roleTypes);
-            return response;
-        }).toList();
+        List<UserResponse> data = page.stream()
+                .map(this::toResponse)
+                .collect(Collectors.toList());
 
         return PageResponse.<UserResponse>builder()
                 .page(pageable.getPageNumber())
-                .totalElement(userPage.getTotalElements())
-                .size(userPage.getSize())
-                .totalPage(userPage.getTotalPages())
+                .size(page.getSize())
+                .totalElement(page.getTotalElements())
+                .totalPage(page.getTotalPages())
                 .content(data)
                 .build();
     }
@@ -81,25 +62,26 @@ public class UserServiceImpl  implements UserService {
     @Override
     @Transactional(rollbackFor = Exception.class)
     public UserResponse save(UserCreationRequest req) {
-//        UserEntity user = modelMapper.map(req , UserEntity.class) ;
+        if (userRepository.findByUsername(req.getUsername()).isPresent()) {
+            throw new RuntimeException("Username đã tồn tại: " + req.getUsername());
+        }
+
         UserEntity user = userMapper.toEntity(req);
         user.setPassword(passwordEncoder.encode(user.getPassword()));
-        Role role = roleRepository.findByName(RoleType.OWNER).orElseThrow(() -> new RuntimeException(""));
-        user.getRolesSet().add(role);
-        user = userRepository.save(user);
-        return userMapper.toDTOResponse(userRepository.save(user)) ;
-//        return  modelMapper.map(user , UserResponse.class);
+
+        Role userRole = roleRepository.findByName(RoleType.OWNER)
+                .orElseThrow(() -> new ResourceNotFoundException("Role OWNER chưa được tạo trong DB"));
+        user.getRolesSet().add(userRole);
+
+        return toResponse(userRepository.save(user));
     }
-
-
 
     @Override
     @Transactional(rollbackFor = Exception.class)
-    public UserResponse update(UserUpdateRequest req , long id) {
+    public UserResponse update(UserUpdateRequest req, long id) {
         UserEntity user = getUserEntity(id);
-//        updateUser hàm của interface UserMapper <-> MapperStruct
-        userMapper.updateUser(user , req );
-        return userMapper.toDTOResponse(userRepository.save(user));
+        userMapper.updateUser(user, req);
+        return toResponse(userRepository.save(user));
     }
 
     @Override
@@ -110,32 +92,44 @@ public class UserServiceImpl  implements UserService {
     }
 
     @Override
-    public void changePassword(UserChangePasswdRequest req , long id) {
+    @Transactional(rollbackFor = Exception.class)
+    public void changePassword(UserChangePasswdRequest req, long id) {
         UserEntity user = getUserEntity(id);
-        if(!passwordEncoder.matches(req.getPassword() , user.getPassword()) || !req.getNewPassword().equals(req.getConfirmPassword())){
-            throw new RuntimeException();
+
+        if (!passwordEncoder.matches(req.getPassword(), user.getPassword())) {
+            throw new RuntimeException("Mật khẩu hiện tại không đúng");
         }
-        user.setPassword(passwordEncoder.encode(req.getConfirmPassword()));
+        if (!req.getNewPassword().equals(req.getConfirmPassword())) {
+            throw new RuntimeException("Mật khẩu mới không khớp với xác nhận");
+        }
+
+        user.setPassword(passwordEncoder.encode(req.getNewPassword()));
         userRepository.save(user);
     }
 
+    @Override
+    @Transactional(rollbackFor = Exception.class)
+    public UserResponse changeRole(RoleType roleType, long id) {
+        UserEntity user = getUserEntity(id);
+        Role newRole = roleRepository.findByName(roleType)
+                .orElseThrow(() -> new ResourceNotFoundException("Role không tồn tại: " + roleType));
+        user.getRolesSet().add(newRole);
+        return toResponse(userRepository.save(user));
+    }
 
+    // ── private helpers ──────────────────────────────────────────────────────
 
     private UserEntity getUserEntity(long id) {
-        return userRepository.findById(id).orElseThrow(() -> new ResourceNotFoundException("User not found"));
+        return userRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("User not found: " + id));
     }
 
-   
-    private UserEntity findByName(String username) {
-        return userRepository.findByUsername(username).orElseThrow(() -> new RuntimeException("User Not Found"));
+    private UserResponse toResponse(UserEntity user) {
+        UserResponse response = userMapper.toDTOResponse(user);
+        Set<RoleType> roles = user.getRolesSet().stream()
+                .map(Role::getName)
+                .collect(Collectors.toSet());
+        response.setRoleTypes(roles);
+        return response;
     }
-
-    @Override
-    public UserResponse changeRole(RoleType role, long id) {
-        UserEntity user = userRepository.findById(id).orElseThrow(() -> new RuntimeException("User not found"));
-        Role newRole = roleRepository.findByName(role).orElseThrow(() -> new RuntimeException(""));
-        user.getRolesSet().add(newRole);
-        return userMapper.toDTOResponse(userRepository.save(user));
-    }
-
 }
